# clinical-trial-protocol-screener

./: .dockerignore  Dockerfile  README.md  baseline_results.json  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
.github/workflows/: hf-sync.yml
baseline/: inference.py
clinical_trial_protocol_screener.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
env/: environment.py  models.py
gallery/: app.js  index.html  style.css
graders/: reward.py
server/: app.py
static/: index.html  script.js  styles.css
tasks/: definitions.py
tests/: validate_logic.py
