[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-trial-protocol-screener"
version = "0.1.0"
description = "Clinical trial screening environment with easy/medium/hard tasks and deterministic grading."
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.114.0",
    "pydantic==2.8.0",
    "uvicorn>=0.27.0,<1.0",
    "openai==1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
